# unified-kg-rag-on-aws

./: .dockerignore  .env-template  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AmazonQ.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  NOTICE  PUBLISHING.md  README.ko.md  README.md  SECURITY.md  THIRD_PARTY_LICENSES  config-template.yaml  pyproject.toml
.codecatalyst/workflows/: aws-graphrag-build-deploy.yaml  secc-aiml-aws-graphrag-build-deploy.yaml
.github/workflows/: quality.yaml  quality.yml  security.yml
.gitlab/: sast-ruleset.toml
assets/: hexagonal-architecture.drawio  hexagonal-architecture.excalidraw  incremental_indexing.excalidraw  ingestion_pipeline.excalidraw  retrieval_pipeline.excalidraw
aws_graphrag/: __init__.py
aws_graphrag/adapters/: __init__.py
aws_graphrag/adapters/aws/: __init__.py  bedrock.py  chain_factory.py  dynamodb.py  embedding_cache.py  neptune.py  opensearch.py  s3_cache.py  token_counter.py
aws_graphrag/adapters/evaluators/: __init__.py  langchain_evaluator.py  ragas_evaluator.py
aws_graphrag/adapters/ingestion/: __init__.py  chunker.py  claim_extractor.py  community_detector.py  description_summarizer.py  gleaner.py  graph_extractor.py  loader.py  parser.py  translator.py
aws_graphrag/adapters/renderers/: adapters.py  base.py  interactive.py  static.py
aws_graphrag/adapters/retrieval/: __init__.py  (+4 more)
aws_graphrag/application/: __init__.py
aws_graphrag/aws/: __init__.py  bedrock.py  dynamodb.py  neptune.py  opensearch.py  s3_cache.py  token_counter.py
aws_graphrag/cli/: __init__.py  run_evaluation.py  run_ingestion_pipeline.py  run_prompt_tuning.py  run_rag_chain.py  run_visualization.py
aws_graphrag/core/: __init__.py  cache_manager.py  config.py  exceptions.py  logging.py  metrics.py  pipeline_manager.py
aws_graphrag/domain/: __init__.py
aws_graphrag/evaluation/: __init__.py  base.py  evaluation_manager.py  graph_aware_evaluator.py  langchain_evaluator.py  ragas_evaluator.py
aws_graphrag/ingestion/: __init__.py  base_processor.py  base_resolver.py  chunker.py  claim_extractor.py  claim_resolver.py  community_detector.py  delta_detector.py  gleaner.py  graph_analyzer.py  graph_builder.py  graph_extractor.py  graph_resolver.py  incremental.py  loader.py  parser.py  pipeline.py  pipeline_stages.py  translator.py
aws_graphrag/models/: __init__.py  base.py  cache.py  community.py  community_report.py  config.py  conversation.py  covariate.py  document.py  entity.py  evaluation.py  pipeline.py  relationship.py  retrieval.py  text_unit.py
aws_graphrag/ports/: __init__.py  cache.py  doc_status.py  indexer.py  model_factory.py
aws_graphrag/prompts/: __init__.py  base.py  data_processing.py  graph_extraction.py  retrieval.py  tuner.py  tuning.py
aws_graphrag/retrieval/: __init__.py  base.py  hybrid_scorer.py  memory_manager.py  mixins.py  rag_chain.py  strategy_registry.py  token_manager.py
aws_graphrag/shared/: __init__.py  cache_manager.py  config.py  exceptions.py  logging.py  metrics.py  pipeline_manager.py
aws_graphrag/storage/: __init__.py  base.py  indexing_manager.py  neptune_indexer.py  opensearch_indexer.py
aws_graphrag/utils/: __init__.py  common.py  display.py  document_converter.py  langchain.py
aws_graphrag/visualization/: __init__.py  base.py
docker/: Dockerfile  entrypoint.sh
docs/: architecture.md  design.en.md  design.ko.md  design.md  legal-intake.md  parsebox-e2e-plan.md  security-triage.md  tech-doc.md  user-guide.ko.md  user-guide.md
iac/: .gitignore  README.md  app.py  cdk.json  config.py  nag_suppressions.py  requirements.txt
iac/stacks/: compute_stack.py  guardrail_stack.py  networking_stack.py  observability_stack.py  orchestration_stack.py  security_stack.py  storage_stack.py
tests/: check_credentials.py  conftest.py  debug_bedrock_access.py  test_available_models.py  test_bedrock_haiku.py  test_bedrock_haiku_fixed.py  test_standard_model_id.py  test_validate_backend_success.py
tests/integration/: test_cross_run_merge.py  test_dynamodb_doc_status.py  test_incremental_e2e.py  test_incremental_indexer.py  test_incremental_loading_stage.py  test_indexing_manager_e2e.py  test_rag_chain_e2e.py  test_real_aws_e2e.py  test_strategy_registry_e2e.py
tests/property/: test_doc_status_properties.py  test_fusion_properties.py  test_merge_properties.py
tests/unit/: test_auto_router_parse.py  test_batch_processor_timeout.py  test_bedrock_capabilities.py  test_cache_manager.py  test_cache_port.py  test_chunker_logic.py  test_claim_extractor_logic.py  test_claim_indexing.py  test_claim_resolution.py  test_claim_resolver_logic.py  test_cli_parsing.py  test_community_detector_logic.py  test_community_report_model.py  test_delta_detector.py  test_description_summarizer.py  test_display_logic.py  test_doc_status.py  test_doc_status_injection.py  test_document_converter.py  test_document_lineage.py  test_domain_purity.py  test_drift_search_logic.py  test_dual_keyword_extraction.py  test_dynamodb_serialize.py  test_embedding_cache.py  test_entity_grounding.py  test_entity_resolution_grouping.py  test_evaluation_manager.py  test_fixtures_smoke.py  test_gleaner_extra.py  test_gleaner_logic.py  test_global_search_logic.py  test_global_search_map_reduce.py  test_global_search_scoring.py  test_graph_analyzer.py  test_graph_aware_evaluator.py  test_graph_builder.py  test_graph_extractor.py  test_graph_resolver_merge.py  test_guardrail_config.py  (+63 more)
unified_kg_rag/: __init__.py
unified_kg_rag/adapters/: __init__.py
unified_kg_rag/application/: __init__.py
unified_kg_rag/domain/: __init__.py
unified_kg_rag/evaluation/: __init__.py  base.py  evaluation_manager.py  graph_aware_evaluator.py
unified_kg_rag/ingestion/: __init__.py
unified_kg_rag/ports/: __init__.py  cache.py  doc_status.py  indexer.py  model_factory.py
unified_kg_rag/retrieval/: __init__.py
unified_kg_rag/shared/: __init__.py  cache_manager.py  config.py  logging.py  metrics.py  pipeline_manager.py
unified_kg_rag/storage/: __init__.py
unified_kg_rag/visualization/: __init__.py  base.py
(+186 files in other folders)
