[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aws-graphrag"
version = "0.2.3"
description = "AWS Native Knowledge Graph RAG Framework"
readme = "README.md"
requires-python = ">=3.10, <3.13"
license = {text = "MIT-0"}
authors = [
    {name = "Amazon.com, Inc. or its affiliates"},
]
keywords = ["aws", "bedrock", "graphrag", "knowledge-graph", "neptune", "opensearch", "rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "asyncio-throttle>=1.0.2",
    "aws-assume-role-lib>=2.10.0",
    "black>=25.9.0",
    "bokeh>=3.7.3",
    "boto3>=1.38.45",
    "boto3-stubs~=1.42.62",
    "datasets>=2.14.0,<4.0.0",
    "datasketch>=1.6.5",
    "future>=1.0.0",
    "graspologic>=3.4.1",
    "gremlinpython>=3.6.3,<3.7.0",
    "langchain>=0.3.26,<1.0.0",
    "langchain-aws>=0.2.27,<1.0.0",
    "langchain-community>=0.3.27,<1.0.0",
    "langchain-core>=0.3.68,<1.0.0",
    "langchain-text-splitters>=0.3.9",
    "llvmlite>=0.43.0",
    "lxml>=6.0.0",
    "networkx>=3.4",
    "numpy>=1.26.4",
    "opensearch-py>=3.0.0",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "pydantic>=2.11.7",
    "pypdf>=6.0.1",
    "python-dotenv>=1.1.1",
    "pyvis>=0.3.2",
    "pyyaml>=6.0.2",
    "ragas>=0.3.0",
    "rapidfuzz>=3.13.0",
    "requests-aws4auth>=1.3.1",
    "rich>=14.0.0",
    "scikit-learn>=1.7.1",
    "structlog>=25.4.0",
    "tenacity>=9.1.2",
    "tiktoken>=0.9.0",
    "tqdm>=4.67.1",
    "types-boto3[full]>=1.39.4",
    "umap-learn>=0.5.6",
]

[project.scripts]
run-ingestion = "aws_graphrag.cli.run_ingestion_pipeline:main"
run-rag = "aws_graphrag.cli.run_rag_chain:main"
run-eval = "aws_graphrag.cli.run_evaluation:main"

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.3.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.urls]
Repository = "https://codecatalyst.aws/spaces/secc-dev/projects/secc-aiml/source-repositories/aws-graphrag"

[tool.hatch.version]
path = "aws_graphrag/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["aws_graphrag"]

[tool.black]
line-length = 88
target-version = ['py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["aws_graphrag"]
skip_gitignore = true

[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["B018"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "gremlin_python.*",
    "igraph.*",
    "datasketch.*",
    "leidenalg.*",
    "community.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "aws: Tests requiring AWS services",
    "slow: Slow tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["aws_graphrag"]
omit = [
    "tests/*",
    "*/test_*.py",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]
